# troupe

./: .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT-BRIEF.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
docs/design/: cast-recast-retire.md  monorepo-scan.md  scan-aware-init.md  troupe-explore.md
scripts/: check_wheel.py
skills/troupe/: SKILL.md
src/troupe/: __init__.py  cli.py  scaffold.py  upgrade.py
src/troupe/casting/: __init__.py  names.json  registry.py  roles.py
src/troupe/charters/: __init__.py  compiler.py  editor.py
src/troupe/commands/: cast.py  charter.py  doctor.py  init.py  upgrade.py  watch.py
src/troupe/discovery/: __init__.py  advisor.py  profile.py  scanner.py
src/troupe/governance/: __init__.py  wiring.py  writes.py
src/troupe/reeve/: __init__.py  context.py  cycle.py  poller.py  runner.py  state.py
src/troupe/templates/: agent.md  charter.md  decisions.md  directives.md  focus.md  history.md  policy.json  team.md  wisdom.md
src/troupe/templates/commands/: troupe-cast.md  troupe-explore.md  troupe-setup.md
src/troupe/templates/hooks/: troupe_decision_log.py  troupe_file_guard.py  troupe_idle_nudge.py  troupe_pii_scrub.py  troupe_review_gate.py  troupe_session_context.py
tests/: conftest.py  test_cast.py  test_casting.py  test_charter.py  test_cli.py  test_discovery.py  test_doctor_upgrade.py  test_governance.py  test_hooks.py  test_init.py  test_packaging.py  test_reeve.py
