[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "troupe"
description = "A persistent, governed AI team for Claude Code — a named cast of specialists, enforced governance hooks, a shared decision log, and an autonomous issue-triage loop."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Kevin" }]
keywords = ["claude-code", "ai-agents", "agent-teams", "cli", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dynamic = ["version"]
dependencies = ["typer>=0.12"]

[project.urls]
Homepage = "https://github.com/KevinIssaDev/troupe"
Repository = "https://github.com/KevinIssaDev/troupe"
Changelog = "https://github.com/KevinIssaDev/troupe/blob/main/CHANGELOG.md"

[project.scripts]
troupe = "troupe.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[tool.hatch.version]
path = "src/troupe/__init__.py"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib — cross-platform correctness is first-class here
]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
